--- a/Resources/Public/Styles/Main.css
+++ b/Resources/Public/Styles/Main.css
@@ -248,7 +248,9 @@
   color: #fff; }
 
 .t3-frontend-editing__page-tree-wrapper {
-  height: 100%;
+  height: 100vh;
+  max-height: calc(100vh - 45px);
+  overflow-y: scroll;
   width: 266px;
   overflow-y: auto;
   overflow-x: hidden;
@@ -424,13 +426,14 @@
   top: 0;
   right: -310px;
   width: 310px;
-  height: 100vh;
-  max-height: 100vh;
-  overflow-y: scroll;
+  min-height: 100%;
   z-index: 10999;
   font-family: "Share", Verdana, Helvetica, Arial, sans-serif;
   text-transform: uppercase; }
   .t3-frontend-editing__right-bar .top-right-bar-wrapper {
+    height: 100vh;
+    max-height: calc(100vh - 45px);
+    overflow-y: scroll;
     margin-top: 45px; }
   .t3-frontend-editing__right-bar.open .top-right-title .icon-icons-arrow-double {
     -webkit-transition: left 0.2s;
